fix: responsive grid on small screen

--- a/frontend/src/components/SideFilter.scss
+++ b/frontend/src/components/SideFilter.scss
@@ -19,6 +19,7 @@
 
 .filters-title {
   padding:0.5em;
+  font-weight: 900;
 }
 
 .distance-selector {
@@ -33,6 +34,7 @@
     width: 100%;
     height: 100%;
     display: flex;
+    justify-content: space-around;
   }
 }
 
@@ -40,7 +42,7 @@
   .filter-bar-container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(2, 1fr);
+    grid-template-rows: 1fr minmax(41px, auto);
     .filters-title {
       height: 25px;
       grid-column: 1;
